--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -2,11 +2,11 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Contact Us - While I remember</title><link rel=apple-touch-icon href=https://ravihara.github.io/images/favicons/apple-touch-icon.png sizes=180x180>
-<link rel=icon href=https://ravihara.github.io/images/favicons/favicon-32x32.png sizes=32x32 type=image/png>
-<link rel=icon href=https://ravihara.github.io/images/favicons/favicon-16x16.png sizes=16x16 type=image/png>
-<link rel=manifest href=https://ravihara.github.io/images/favicons/manifest.json>
-<link rel=icon href=https://ravihara.github.io/images/favicons/favicon.ico>
+<title>Contact Us - While I remember</title><link rel=apple-touch-icon href=https://blog.mustertech.org/images/favicons/apple-touch-icon.png sizes=180x180>
+<link rel=icon href=https://blog.mustertech.org/images/favicons/favicon-32x32.png sizes=32x32 type=image/png>
+<link rel=icon href=https://blog.mustertech.org/images/favicons/favicon-16x16.png sizes=16x16 type=image/png>
+<link rel=manifest href=https://blog.mustertech.org/images/favicons/manifest.json>
+<link rel=icon href=https://blog.mustertech.org/images/favicons/favicon.ico>
 <meta name=keywords content>
 <meta name=description content><meta itemprop=name content="Contact Us">
 <meta itemprop=description content>
@@ -14,18 +14,18 @@
 <meta itemprop=keywords content><meta property="og:title" content="Contact Us">
 <meta property="og:description" content>
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://ravihara.github.io/en/contact/"><meta property="article:section" content>
+<meta property="og:url" content="https://blog.mustertech.org/en/contact/"><meta property="article:section" content>
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="Contact Us">
 <meta name=twitter:description content>
 <meta name=twitter:site content="@ahikrv">
-<link rel=preload href=https://ravihara.github.io/css/bundle.min.89b15c76d23b1055e418eed718cb78886010e537918653f0a43661ed56307392.css integrity="sha256-ibFcdtI7EFXkGO7XGMt4iGAQ5TeRhlPwpDZh7VYwc5I=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
-<noscript><link rel=stylesheet href=https://ravihara.github.io/css/bundle.min.89b15c76d23b1055e418eed718cb78886010e537918653f0a43661ed56307392.css integrity="sha256-ibFcdtI7EFXkGO7XGMt4iGAQ5TeRhlPwpDZh7VYwc5I=" crossorigin=anonymous></noscript></head>
-<body><script src=https://ravihara.github.io/js/bootstrap.min.b5d86dd3a5f60c90be38a252bb65fc1a2732f32e71dc12c051720f0c7aef3cde.js integrity="sha256-tdht06X2DJC+OKJSu2X8Gicy8y5x3BLAUXIPDHrvPN4=" crossorigin=anonymous></script><header><nav class="navbar top-app-bar top-app-bar-expand-lg fixed-top">
+<link rel=preload href=https://blog.mustertech.org/css/bundle.min.89b15c76d23b1055e418eed718cb78886010e537918653f0a43661ed56307392.css integrity="sha256-ibFcdtI7EFXkGO7XGMt4iGAQ5TeRhlPwpDZh7VYwc5I=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
+<noscript><link rel=stylesheet href=https://blog.mustertech.org/css/bundle.min.89b15c76d23b1055e418eed718cb78886010e537918653f0a43661ed56307392.css integrity="sha256-ibFcdtI7EFXkGO7XGMt4iGAQ5TeRhlPwpDZh7VYwc5I=" crossorigin=anonymous></noscript></head>
+<body><script src=https://blog.mustertech.org/js/bootstrap.min.b5d86dd3a5f60c90be38a252bb65fc1a2732f32e71dc12c051720f0c7aef3cde.js integrity="sha256-tdht06X2DJC+OKJSu2X8Gicy8y5x3BLAUXIPDHrvPN4=" crossorigin=anonymous></script><header><nav class="navbar top-app-bar top-app-bar-expand-lg fixed-top">
 <div class=container>
 <button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarSupportedContent aria-controls=navbarSupportedContent aria-expanded=false aria-label="Toggle navigation">
 <i class="fas fa-bars"></i>
-</button><a class="navbar-brand me-3" href=https://ravihara.github.io/en/>While I Remember
+</button><a class="navbar-brand me-3" href=https://blog.mustertech.org/en/>While I Remember
 </a>
 <button class=navbar-social-share type=button data-bs-toggle=offcanvas data-bs-target=#offcanvasSocialShare aria-controls=offcanvasSocialShare aria-label="Toggle social share">
 <i class="fas fa-share-alt"></i>
@@ -38,10 +38,10 @@
 </button>
 </div>
 <div class=offcanvas-body>
-<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=Contact%20Us&url=https%3a%2f%2fravihara.github.io%2fen%2fcontact%2f">
+<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=Contact%20Us&url=https%3a%2f%2fblog.mustertech.org%2fen%2fcontact%2f">
 <i class="fab fa-fw fa-twitter"></i> Twitter
 </a>
-<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Facebook Share Button" target=_blank href="https://www.facebook.com/sharer/sharer.php?u=https%3a%2f%2fravihara.github.io%2fen%2fcontact%2f">
+<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Facebook Share Button" target=_blank href="https://www.facebook.com/sharer/sharer.php?u=https%3a%2f%2fblog.mustertech.org%2fen%2fcontact%2f">
 <i class="fab fa-fw fa-facebook-f"></i> Facebook
 </a>
 </div>
@@ -66,7 +66,7 @@
 <a class="btn btn-sm btn-outline-primary dropdown-toggle" href=# id=languageDropdown role=button data-bs-toggle=dropdown aria-expanded=false>
 English
 </a>
-<ul class="dropdown-menu dropdown-menu-end" aria-labelledby=languageDropdown><li><a class=dropdown-item href=https://ravihara.github.io/kn/>ಕನ್ನಡ</a></li></ul>
+<ul class="dropdown-menu dropdown-menu-end" aria-labelledby=languageDropdown><li><a class=dropdown-item href=https://blog.mustertech.org/kn/>ಕನ್ನಡ</a></li></ul>
 </div>
 </div>
 </form>
@@ -96,26 +96,26 @@ English
 </div>
 </div>
 <div class="collapse navbar-collapse" tabindex=-1 id=navbarSupportedContent aria-labelledby=navbarSupportedContent>
-<form class="search-bar my-1" action=https://ravihara.github.io/en/search>
+<form class="search-bar my-1" action=https://blog.mustertech.org/en/search>
 <div class="input-group input-group-sm">
 <span class="btn btn-search disabled position-absolute left-0"><i class="fas fa-fw fa-search"></i></span>
 <input class="form-control rounded-pill" name=q type=search aria-label=Search>
 </div>
 </form>
 <ul class="navbar-nav ms-auto"><li class=nav-item>
-<a class=nav-link href=https://ravihara.github.io/en/archives/>
+<a class=nav-link href=https://blog.mustertech.org/en/archives/>
 <i class="fas fa-fw fa-file-archive"></i>Archives
 </a>
 </li><li class=nav-item>
-<a class=nav-link href=https://ravihara.github.io/en/categories/>
+<a class=nav-link href=https://blog.mustertech.org/en/categories/>
 <i class="fas fa-fw fa-folder"></i>Categories
 </a>
 </li><li class=nav-item>
-<a class=nav-link href=https://ravihara.github.io/en/tags/>
+<a class=nav-link href=https://blog.mustertech.org/en/tags/>
 <i class="fas fa-fw fa-tags"></i>Tags
 </a>
 </li><li class=nav-item>
-<a class=nav-link href=https://ravihara.github.io/en/series/>
+<a class=nav-link href=https://blog.mustertech.org/en/series/>
 <i class="fas fa-fw fa-columns"></i>Series
 </a>
 </li><li class=nav-item>
@@ -135,7 +135,7 @@ English
 <div class="row content">
 <div class=col-lg-8><nav class="row card component" aria-label=breadcrumb>
 <div class=card-body>
-<ol class=breadcrumb><li class=breadcrumb-item><a href=https://ravihara.github.io/en/>Home</a></li><li class="breadcrumb-item active">Contact Us</li></ol>
+<ol class=breadcrumb><li class=breadcrumb-item><a href=https://blog.mustertech.org/en/>Home</a></li><li class="breadcrumb-item active">Contact Us</li></ol>
 </div>
 </nav><div class="contact row component card">
 <div class=card-body>
@@ -165,55 +165,55 @@ English
 <div class=container>
 <section class="card row text-center profile component">
 <div class=card-body>
-<div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Ravishankar Haranath" src=https://ravihara.github.io/images/profile.png loading=lazy width=1080 height=1080>
+<div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Ravishankar Haranath" src=https://blog.mustertech.org/images/profile.png loading=lazy width=1080 height=1080>
 </div>
-<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Golang, JS/Node, Java-SE, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Business with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Bengaluru</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=https://ravihara.github.io/en/about/>About</a></div><div class=profile-contact><i class="fas fa-fw fa-question-circle"></i><a href=https://ravihara.github.io/en/contact/>Contact Us</a></div></div>
+<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Golang, JS/Node, Java-SE, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Business with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Bengaluru</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=https://blog.mustertech.org/en/about/>About</a></div><div class=profile-contact><i class="fas fa-fw fa-question-circle"></i><a href=https://blog.mustertech.org/en/contact/>Contact Us</a></div></div>
 </div>
 </section>
 <section class="featured-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Featured Posts</h2>
-<ul><li><a href=https://ravihara.github.io/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
+<ul><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
 </div>
 </section><section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=https://ravihara.github.io/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
+<ul><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
 </div>
 </section><section class="taxonomies row card component">
 <div class=card-body>
 <h2 class=card-title>
-<a href=https://ravihara.github.io/en/categories>Categories</a>
+<a href=https://blog.mustertech.org/en/categories>Categories</a>
 </h2>
-<div><a href=https://ravihara.github.io/en/categories/linux/ class="badge bg-primary text-white rounded post-taxonomy" title=Linux>
+<div><a href=https://blog.mustertech.org/en/categories/linux/ class="badge bg-primary text-white rounded post-taxonomy" title=Linux>
 Linux
-</a><a href=https://ravihara.github.io/en/categories/networking/ class="badge bg-primary text-white rounded post-taxonomy" title=Networking>
+</a><a href=https://blog.mustertech.org/en/categories/networking/ class="badge bg-primary text-white rounded post-taxonomy" title=Networking>
 Networking
 </a></div>
 </div>
 </section><section class="taxonomies row card component">
 <div class=card-body>
 <h2 class=card-title>
-<a href=https://ravihara.github.io/en/series>Series</a>
+<a href=https://blog.mustertech.org/en/series>Series</a>
 </h2>
-<div><a href=https://ravihara.github.io/en/series/manual/ class="badge bg-primary text-white rounded post-taxonomy" title=Manual>
+<div><a href=https://blog.mustertech.org/en/series/manual/ class="badge bg-primary text-white rounded post-taxonomy" title=Manual>
 Manual
 </a></div>
 </div>
 </section><section class="taxonomies row card component">
 <div class=card-body>
 <h2 class=card-title>
-<a href=https://ravihara.github.io/en/tags>Tags</a>
+<a href=https://blog.mustertech.org/en/tags>Tags</a>
 </h2>
-<div><a href=https://ravihara.github.io/en/tags/cdma/ class="badge bg-primary text-white rounded post-taxonomy" title=cdma>
+<div><a href=https://blog.mustertech.org/en/tags/cdma/ class="badge bg-primary text-white rounded post-taxonomy" title=cdma>
 cdma
-</a><a href=https://ravihara.github.io/en/tags/home/ class="badge bg-primary text-white rounded post-taxonomy" title=home>
+</a><a href=https://blog.mustertech.org/en/tags/home/ class="badge bg-primary text-white rounded post-taxonomy" title=home>
 home
-</a><a href=https://ravihara.github.io/en/tags/linux/ class="badge bg-primary text-white rounded post-taxonomy" title=linux>
+</a><a href=https://blog.mustertech.org/en/tags/linux/ class="badge bg-primary text-white rounded post-taxonomy" title=linux>
 linux
-</a><a href=https://ravihara.github.io/en/tags/wifi/ class="badge bg-primary text-white rounded post-taxonomy" title=wifi>
+</a><a href=https://blog.mustertech.org/en/tags/wifi/ class="badge bg-primary text-white rounded post-taxonomy" title=wifi>
 wifi
 </a></div>
 </div>
@@ -240,6 +240,6 @@ Copyright © 2021-2021 Ravishankar Haranath. All Rights Reserved.
 <div class="powered-by mb-2">
 Powered by <a href=https://gohugo.io target=_blank rel="noopener noreferrer">Hugo</a> and the <a href=https://github.com/razonyang/hugo-theme-bootstrap target=_blank rel="noopener noreferrer">Bootstrap</a> theme.
 </div></footer>
-<script src=https://ravihara.github.io/js/bundle.min.52d895defdf1b45a7af6e9c66893e370e2952d223eeb2b3a2ba3a27eedab2682.js integrity="sha256-UtiV3v3xtFp69unGaJPjcOKVLSI+6ys6K6Oifu2rJoI=" crossorigin=anonymous defer></script><script defer src=https://ravihara.github.io/js/viewer.min.9f39f897757e616b3f6faf1d7955ea42a180a4e71d898e80f1c13d45e59b9abb.js integrity="sha256-nzn4l3V+YWs/b68deVXqQqGApOcdiY6A8cE9ReWbmrs=" crossorigin=anonymous></script>
+<script src=https://blog.mustertech.org/js/bundle.min.52d895defdf1b45a7af6e9c66893e370e2952d223eeb2b3a2ba3a27eedab2682.js integrity="sha256-UtiV3v3xtFp69unGaJPjcOKVLSI+6ys6K6Oifu2rJoI=" crossorigin=anonymous defer></script><script defer src=https://blog.mustertech.org/js/viewer.min.9f39f897757e616b3f6faf1d7955ea42a180a4e71d898e80f1c13d45e59b9abb.js integrity="sha256-nzn4l3V+YWs/b68deVXqQqGApOcdiY6A8cE9ReWbmrs=" crossorigin=anonymous></script>
 </body>
 </html>
