deploy: 5387f348b585d72bdaab93687c134ba8e813a39f

--- a/kn/index.html
+++ b/kn/index.html
@@ -18,8 +18,8 @@
 <meta name=twitter:title content="ನನಗೆ ನೆನಪಿರುವಾಗ">
 <meta name=twitter:description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ">
 <meta name=twitter:site content="@ahikrv">
-<link rel=alternate type=application/rss+xml href=https://blog.mustertech.org/kn/index.xml title="ನನಗೆ ನೆನಪಿರುವಾಗ"><link rel=preload href=https://blog.mustertech.org/css/bundle.min.89b15c76d23b1055e418eed718cb78886010e537918653f0a43661ed56307392.css integrity="sha256-ibFcdtI7EFXkGO7XGMt4iGAQ5TeRhlPwpDZh7VYwc5I=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
-<noscript><link rel=stylesheet href=https://blog.mustertech.org/css/bundle.min.89b15c76d23b1055e418eed718cb78886010e537918653f0a43661ed56307392.css integrity="sha256-ibFcdtI7EFXkGO7XGMt4iGAQ5TeRhlPwpDZh7VYwc5I=" crossorigin=anonymous></noscript></head>
+<link rel=alternate type=application/rss+xml href=https://blog.mustertech.org/kn/index.xml title="ನನಗೆ ನೆನಪಿರುವಾಗ"><link rel=preload href=https://blog.mustertech.org/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
+<noscript><link rel=stylesheet href=https://blog.mustertech.org/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous></noscript></head>
 <body><script src=https://blog.mustertech.org/js/bootstrap.min.b5d86dd3a5f60c90be38a252bb65fc1a2732f32e71dc12c051720f0c7aef3cde.js integrity="sha256-tdht06X2DJC+OKJSu2X8Gicy8y5x3BLAUXIPDHrvPN4=" crossorigin=anonymous></script><header><nav class="navbar top-app-bar top-app-bar-expand-lg fixed-top">
 <div class=container>
 <button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarSupportedContent aria-controls=navbarSupportedContent aria-expanded=false aria-label="Toggle navigation">
@@ -135,15 +135,14 @@
 <div class=col-lg-8>
 <div class=container><div class="posts mb-4"><article class="row card post component">
 <div class=card-body>
-<h2 class="card-title post-title"><a href=https://blog.mustertech.org/kn/posts/markdown-syntax/>Markdown Syntax Guide
+<h2 class="card-title post-title"><a href=https://blog.mustertech.org/kn/posts/higondu_baraha/>ಹೀಗೊಂದು ಬರಹ
 </a></h2><div class=post-meta><span class=post-date title="created on">
-<i class="fas fa-fw fa-calendar-alt"></i>911-110-90911
+<i class="fas fa-fw fa-calendar-alt"></i>1411-110-141411
 </span><span class=post-reading-time title="reading time">
-<i class="fas fa-fw fa-coffee"></i>3 min read
-</span><a href=https://blog.mustertech.org/kn/series/user-manual/ class="badge rounded-pill text-white bg-primary post-taxonomy">User Manual</a><a href=https://blog.mustertech.org/kn/tags/markdown/ class="badge rounded-pill text-white bg-primary post-taxonomy">Markdown</a><a href=https://blog.mustertech.org/kn/tags/css/ class="badge rounded-pill text-white bg-primary post-taxonomy">CSS</a><a href=https://blog.mustertech.org/kn/tags/html/ class="badge rounded-pill text-white bg-primary post-taxonomy">HTML</a></div>
+<i class="fas fa-fw fa-coffee"></i>1 min read
+</span><a href=https://blog.mustertech.org/kn/categories/%E0%B2%AC%E0%B2%B0%E0%B2%B9%E0%B2%97%E0%B2%B3%E0%B3%81/ class="badge rounded-pill text-white bg-primary post-taxonomy">ಬರಹಗಳು</a><a href=https://blog.mustertech.org/kn/series/%E0%B2%AC%E0%B2%B0%E0%B2%B9-%E0%B2%B8%E0%B2%82%E0%B2%97%E0%B3%8D%E0%B2%B0%E0%B2%B9/ class="badge rounded-pill text-white bg-primary post-taxonomy">ಬರಹ ಸಂಗ್ರಹ</a><a href=https://blog.mustertech.org/kn/tags/markdown/ class="badge rounded-pill text-white bg-primary post-taxonomy">Markdown</a><a href=https://blog.mustertech.org/kn/tags/css/ class="badge rounded-pill text-white bg-primary post-taxonomy">CSS</a><a href=https://blog.mustertech.org/kn/tags/html/ class="badge rounded-pill text-white bg-primary post-taxonomy">HTML</a></div>
 <div class=post-summary>
-<img class=img-fluid alt="Markdown Syntax Guide" src=https://blog.mustertech.org/images/markdown.png loading=lazy width=266 height=149>
-<p>This article offers a sample of basic Markdown syntax that can be used in Hugo content files, also it shows whether basic HTML elements are decorated with CSS in a Hugo theme.</p>
+ಕಾಯ್ದಿರಿಸಲಾಗಿದೆ.
 </div>
 </div>
 </article></div><div class="row table-responsive mb-3"></div>
@@ -154,28 +153,37 @@
 <div class=card-body>
 <div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Ravishankar Haranath" src=https://blog.mustertech.org/images/profile.png loading=lazy width=1080 height=1080>
 </div>
-<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Golang, JS/Node, Java-SE, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Business with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Bengaluru</div></div>
+<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Ubuntu, Golang, JS/Node, Java-SE, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Business with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Bengaluru</div></div>
 </div>
 </section>
 <section class="featured-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Featured Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/kn/posts/markdown-syntax/>Markdown Syntax Guide
+<ul><li><a href=https://blog.mustertech.org/kn/posts/higondu_baraha/>ಹೀಗೊಂದು ಬರಹ
 </a></li></ul>
 </div>
 </section><section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/kn/posts/markdown-syntax/>Markdown Syntax Guide
+<ul><li><a href=https://blog.mustertech.org/kn/posts/higondu_baraha/>ಹೀಗೊಂದು ಬರಹ
 </a></li></ul>
+</div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=https://blog.mustertech.org/kn/categories>Categories</a>
+</h2>
+<div><a href=https://blog.mustertech.org/kn/categories/%E0%B2%AC%E0%B2%B0%E0%B2%B9%E0%B2%97%E0%B2%B3%E0%B3%81/ class="badge bg-primary text-white rounded post-taxonomy" title=ಬರಹಗಳು>
+ಬರಹಗಳು
+</a></div>
 </div>
 </section><section class="taxonomies row card component">
 <div class=card-body>
 <h2 class=card-title>
 <a href=https://blog.mustertech.org/kn/series>Series</a>
 </h2>
-<div><a href=https://blog.mustertech.org/kn/series/user-manual/ class="badge bg-primary text-white rounded post-taxonomy" title="User Manual">
-User Manual
+<div><a href=https://blog.mustertech.org/kn/series/%E0%B2%AC%E0%B2%B0%E0%B2%B9-%E0%B2%B8%E0%B2%82%E0%B2%97%E0%B3%8D%E0%B2%B0%E0%B2%B9/ class="badge bg-primary text-white rounded post-taxonomy" title="ಬರಹ ಸಂಗ್ರಹ">
+ಬರಹ ಸಂಗ್ರಹ
 </a></div>
 </div>
 </section><section class="taxonomies row card component">
