--- a/en/about/index.html
+++ b/en/about/index.html
@@ -22,8 +22,8 @@
 <meta name=twitter:title content="About">
 <meta name=twitter:description content="Personal website of Ravishankar Haranath, created using Hugo">
 <meta name=twitter:site content="@ahikrv">
-<link rel=preload href=https://blog.mustertech.org/css/bundle.min.89b15c76d23b1055e418eed718cb78886010e537918653f0a43661ed56307392.css integrity="sha256-ibFcdtI7EFXkGO7XGMt4iGAQ5TeRhlPwpDZh7VYwc5I=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
-<noscript><link rel=stylesheet href=https://blog.mustertech.org/css/bundle.min.89b15c76d23b1055e418eed718cb78886010e537918653f0a43661ed56307392.css integrity="sha256-ibFcdtI7EFXkGO7XGMt4iGAQ5TeRhlPwpDZh7VYwc5I=" crossorigin=anonymous></noscript></head>
+<link rel=preload href=https://blog.mustertech.org/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
+<noscript><link rel=stylesheet href=https://blog.mustertech.org/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous></noscript></head>
 <body><script src=https://blog.mustertech.org/js/bootstrap.min.b5d86dd3a5f60c90be38a252bb65fc1a2732f32e71dc12c051720f0c7aef3cde.js integrity="sha256-tdht06X2DJC+OKJSu2X8Gicy8y5x3BLAUXIPDHrvPN4=" crossorigin=anonymous></script><header><nav class="navbar top-app-bar top-app-bar-expand-lg fixed-top">
 <div class=container>
 <button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarSupportedContent aria-controls=navbarSupportedContent aria-expanded=false aria-label="Toggle navigation">
@@ -185,19 +185,21 @@ classical languages of India.</p>
 <div class=card-body>
 <div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Ravishankar Haranath" src=https://blog.mustertech.org/images/profile.png loading=lazy width=1080 height=1080>
 </div>
-<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Golang, JS/Node, Java-SE, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Business with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Bengaluru</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=https://blog.mustertech.org/en/about/>About</a></div><div class=profile-contact><i class="fas fa-fw fa-question-circle"></i><a href=https://blog.mustertech.org/en/contact/>Contact Us</a></div></div>
+<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Ubuntu, Golang, JS/Node, Java-SE, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Business with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Bengaluru</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=https://blog.mustertech.org/en/about/>About</a></div><div class=profile-contact><i class="fas fa-fw fa-question-circle"></i><a href=https://blog.mustertech.org/en/contact/>Contact Us</a></div></div>
 </div>
 </section>
 <section class="featured-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Featured Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
+<ul><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
+</a></li><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
 </div>
 </section><section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
+<ul><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
+</a></li><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
 </div>
 </section><section class="taxonomies row card component">
@@ -205,10 +207,12 @@ classical languages of India.</p>
 <h2 class=card-title>
 <a href=https://blog.mustertech.org/en/categories>Categories</a>
 </h2>
-<div><a href=https://blog.mustertech.org/en/categories/linux/ class="badge bg-primary text-white rounded post-taxonomy" title=Linux>
-Linux
+<div><a href=https://blog.mustertech.org/en/categories/ubuntu/ class="badge bg-primary text-white rounded post-taxonomy" title=Ubuntu>
+Ubuntu
 </a><a href=https://blog.mustertech.org/en/categories/networking/ class="badge bg-primary text-white rounded post-taxonomy" title=Networking>
 Networking
+</a><a href=https://blog.mustertech.org/en/categories/system/ class="badge bg-primary text-white rounded post-taxonomy" title=System>
+System
 </a></div>
 </div>
 </section><section class="taxonomies row card component">
@@ -225,12 +229,18 @@ Manual
 <h2 class=card-title>
 <a href=https://blog.mustertech.org/en/tags>Tags</a>
 </h2>
-<div><a href=https://blog.mustertech.org/en/tags/cdma/ class="badge bg-primary text-white rounded post-taxonomy" title=cdma>
+<div><a href=https://blog.mustertech.org/en/tags/linux/ class="badge bg-primary text-white rounded post-taxonomy" title=linux>
+linux
+</a><a href=https://blog.mustertech.org/en/tags/ubuntu/ class="badge bg-primary text-white rounded post-taxonomy" title=ubuntu>
+ubuntu
+</a><a href=https://blog.mustertech.org/en/tags/cdma/ class="badge bg-primary text-white rounded post-taxonomy" title=cdma>
 cdma
+</a><a href=https://blog.mustertech.org/en/tags/gdrive/ class="badge bg-primary text-white rounded post-taxonomy" title=gdrive>
+gdrive
+</a><a href=https://blog.mustertech.org/en/tags/google-drive/ class="badge bg-primary text-white rounded post-taxonomy" title=google-drive>
+google-drive
 </a><a href=https://blog.mustertech.org/en/tags/home/ class="badge bg-primary text-white rounded post-taxonomy" title=home>
 home
-</a><a href=https://blog.mustertech.org/en/tags/linux/ class="badge bg-primary text-white rounded post-taxonomy" title=linux>
-linux
 </a><a href=https://blog.mustertech.org/en/tags/wifi/ class="badge bg-primary text-white rounded post-taxonomy" title=wifi>
 wifi
 </a></div>
