deploy: 45111a0f6aa84226ab2ddce8aa668cad1afadf51

--- a/kn/index.html
+++ b/kn/index.html
@@ -133,19 +133,7 @@
 <main role=main class=container>
 <div class="row content">
 <div class=col-lg-8>
-<div class=container><div class="posts mb-4"><article class="row card post component">
-<div class=card-body>
-<h2 class="card-title post-title"><a href=https://blog.mustertech.org/kn/posts/higondu_baraha/>ಹೀಗೊಂದು ಬರಹ
-</a></h2><div class=post-meta><span class=post-date title="created on">
-<i class="fas fa-fw fa-calendar-alt"></i>1411-110-141411
-</span><span class=post-reading-time title="reading time">
-<i class="fas fa-fw fa-coffee"></i>1 min read
-</span><a href=https://blog.mustertech.org/kn/categories/%E0%B2%AC%E0%B2%B0%E0%B2%B9%E0%B2%97%E0%B2%B3%E0%B3%81/ class="badge rounded-pill text-white bg-primary post-taxonomy">ಬರಹಗಳು</a><a href=https://blog.mustertech.org/kn/series/%E0%B2%AC%E0%B2%B0%E0%B2%B9-%E0%B2%B8%E0%B2%82%E0%B2%97%E0%B3%8D%E0%B2%B0%E0%B2%B9/ class="badge rounded-pill text-white bg-primary post-taxonomy">ಬರಹ ಸಂಗ್ರಹ</a><a href=https://blog.mustertech.org/kn/tags/markdown/ class="badge rounded-pill text-white bg-primary post-taxonomy">Markdown</a><a href=https://blog.mustertech.org/kn/tags/css/ class="badge rounded-pill text-white bg-primary post-taxonomy">CSS</a><a href=https://blog.mustertech.org/kn/tags/html/ class="badge rounded-pill text-white bg-primary post-taxonomy">HTML</a></div>
-<div class=post-summary>
-ಕಾಯ್ದಿರಿಸಲಾಗಿದೆ.
-</div>
-</div>
-</article></div><div class="row table-responsive mb-3"></div>
+<div class=container><div class="posts mb-4"></div><div class="row table-responsive mb-3"></div>
 </div>
 </div><aside class="col-lg-4 sidebar d-flex">
 <div class=container>
@@ -153,51 +141,13 @@
 <div class=card-body>
 <div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Ravishankar Haranath" src=https://blog.mustertech.org/images/profile.png loading=lazy width=1080 height=1080>
 </div>
-<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Ubuntu, Golang, JS/Node, Java-SE, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Business with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Bengaluru</div></div>
+<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Ubuntu, RHEL, JS/Node, Java-SE, Golang, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Solutions with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i><a href=https://goo.gl/maps/xw3V1iacBnY3JNRW6 target=_blank>Bengaluru</a></div></div>
 </div>
 </section>
-<section class="featured-posts row card component">
-<div class=card-body>
-<h2 class=card-title>Featured Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/kn/posts/higondu_baraha/>ಹೀಗೊಂದು ಬರಹ
-</a></li></ul>
-</div>
-</section><section class="recent-posts row card component">
+<section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/kn/posts/higondu_baraha/>ಹೀಗೊಂದು ಬರಹ
-</a></li></ul>
-</div>
-</section><section class="taxonomies row card component">
-<div class=card-body>
-<h2 class=card-title>
-<a href=https://blog.mustertech.org/kn/categories>Categories</a>
-</h2>
-<div><a href=https://blog.mustertech.org/kn/categories/%E0%B2%AC%E0%B2%B0%E0%B2%B9%E0%B2%97%E0%B2%B3%E0%B3%81/ class="badge bg-primary text-white rounded post-taxonomy" title=ಬರಹಗಳು>
-ಬರಹಗಳು
-</a></div>
-</div>
-</section><section class="taxonomies row card component">
-<div class=card-body>
-<h2 class=card-title>
-<a href=https://blog.mustertech.org/kn/series>Series</a>
-</h2>
-<div><a href=https://blog.mustertech.org/kn/series/%E0%B2%AC%E0%B2%B0%E0%B2%B9-%E0%B2%B8%E0%B2%82%E0%B2%97%E0%B3%8D%E0%B2%B0%E0%B2%B9/ class="badge bg-primary text-white rounded post-taxonomy" title="ಬರಹ ಸಂಗ್ರಹ">
-ಬರಹ ಸಂಗ್ರಹ
-</a></div>
-</div>
-</section><section class="taxonomies row card component">
-<div class=card-body>
-<h2 class=card-title>
-<a href=https://blog.mustertech.org/kn/tags>Tags</a>
-</h2>
-<div><a href=https://blog.mustertech.org/kn/tags/css/ class="badge bg-primary text-white rounded post-taxonomy" title=CSS>
-CSS
-</a><a href=https://blog.mustertech.org/kn/tags/html/ class="badge bg-primary text-white rounded post-taxonomy" title=HTML>
-HTML
-</a><a href=https://blog.mustertech.org/kn/tags/markdown/ class="badge bg-primary text-white rounded post-taxonomy" title=Markdown>
-Markdown
-</a></div>
+<ul></ul>
 </div>
 </section>
 </div>
