--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -2,21 +2,21 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Contact Us - While I remember</title><link rel=apple-touch-icon href=https://blog.mustertech.org/images/favicons/apple-touch-icon.png sizes=180x180>
+<title>Contact Me - While I remember</title><link rel=apple-touch-icon href=https://blog.mustertech.org/images/favicons/apple-touch-icon.png sizes=180x180>
 <link rel=icon href=https://blog.mustertech.org/images/favicons/favicon-32x32.png sizes=32x32 type=image/png>
 <link rel=icon href=https://blog.mustertech.org/images/favicons/favicon-16x16.png sizes=16x16 type=image/png>
 <link rel=manifest href=https://blog.mustertech.org/images/favicons/manifest.json>
 <link rel=icon href=https://blog.mustertech.org/images/favicons/favicon.ico>
 <meta name=keywords content>
-<meta name=description content><meta itemprop=name content="Contact Us">
+<meta name=description content><meta itemprop=name content="Contact Me">
 <meta itemprop=description content>
 <meta itemprop=wordCount content="0">
-<meta itemprop=keywords content><meta property="og:title" content="Contact Us">
+<meta itemprop=keywords content><meta property="og:title" content="Contact Me">
 <meta property="og:description" content>
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://blog.mustertech.org/en/contact/"><meta property="article:section" content>
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Contact Us">
+<meta name=twitter:title content="Contact Me">
 <meta name=twitter:description content>
 <meta name=twitter:site content="@ahikrv">
 <link rel=preload href=https://blog.mustertech.org/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
@@ -38,7 +38,7 @@
 </button>
 </div>
 <div class=offcanvas-body>
-<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=Contact%20Us&url=https%3a%2f%2fblog.mustertech.org%2fen%2fcontact%2f">
+<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=Contact%20Me&url=https%3a%2f%2fblog.mustertech.org%2fen%2fcontact%2f">
 <i class="fab fa-fw fa-twitter"></i> Twitter
 </a>
 <a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Facebook Share Button" target=_blank href="https://www.facebook.com/sharer/sharer.php?u=https%3a%2f%2fblog.mustertech.org%2fen%2fcontact%2f">
@@ -135,7 +135,7 @@ English
 <div class="row content">
 <div class=col-lg-8><nav class="row card component" aria-label=breadcrumb>
 <div class=card-body>
-<ol class=breadcrumb><li class=breadcrumb-item><a href=https://blog.mustertech.org/en/>Home</a></li><li class="breadcrumb-item active">Contact Us</li></ol>
+<ol class=breadcrumb><li class=breadcrumb-item><a href=https://blog.mustertech.org/en/>Home</a></li><li class="breadcrumb-item active">Contact Me</li></ol>
 </div>
 </nav><div class="contact row component card">
 <div class=card-body>
@@ -167,20 +167,22 @@ English
 <div class=card-body>
 <div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Ravishankar Haranath" src=https://blog.mustertech.org/images/profile.png loading=lazy width=1080 height=1080>
 </div>
-<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Ubuntu, Golang, JS/Node, Java-SE, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Business with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Bengaluru</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=https://blog.mustertech.org/en/about/>About</a></div><div class=profile-contact><i class="fas fa-fw fa-question-circle"></i><a href=https://blog.mustertech.org/en/contact/>Contact Us</a></div></div>
+<div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Ubuntu, RHEL, JS/Node, Java-SE, Golang, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Solutions with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i><a href=https://goo.gl/maps/xw3V1iacBnY3JNRW6 target=_blank>Bengaluru</a></div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=https://blog.mustertech.org/en/about/>About Me</a></div><div class=profile-contact><i class="fas fa-fw fa-question-circle"></i><a href=https://blog.mustertech.org/en/contact/>Contact Me</a></div></div>
 </div>
 </section>
 <section class="featured-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Featured Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
+<ul><li><a href=https://blog.mustertech.org/en/posts/java-code-points/>Useful Points for Java Coding
+</a></li><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
 </a></li><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
 </div>
 </section><section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
+<ul><li><a href=https://blog.mustertech.org/en/posts/java-code-points/>Useful Points for Java Coding
+</a></li><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
 </a></li><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
 </div>
@@ -193,6 +195,8 @@ English
 Ubuntu
 </a><a href=https://blog.mustertech.org/en/categories/networking/ class="badge bg-primary text-white rounded post-taxonomy" title=Networking>
 Networking
+</a><a href=https://blog.mustertech.org/en/categories/programming/ class="badge bg-primary text-white rounded post-taxonomy" title=programming>
+programming
 </a><a href=https://blog.mustertech.org/en/categories/system/ class="badge bg-primary text-white rounded post-taxonomy" title=System>
 System
 </a></div>
@@ -215,14 +219,20 @@ Manual
 linux
 </a><a href=https://blog.mustertech.org/en/tags/ubuntu/ class="badge bg-primary text-white rounded post-taxonomy" title=ubuntu>
 ubuntu
+</a><a href=https://blog.mustertech.org/en/tags/best-practice/ class="badge bg-primary text-white rounded post-taxonomy" title=best-practice>
+best-practice
 </a><a href=https://blog.mustertech.org/en/tags/cdma/ class="badge bg-primary text-white rounded post-taxonomy" title=cdma>
 cdma
+</a><a href=https://blog.mustertech.org/en/tags/coding/ class="badge bg-primary text-white rounded post-taxonomy" title=coding>
+coding
 </a><a href=https://blog.mustertech.org/en/tags/gdrive/ class="badge bg-primary text-white rounded post-taxonomy" title=gdrive>
 gdrive
 </a><a href=https://blog.mustertech.org/en/tags/google-drive/ class="badge bg-primary text-white rounded post-taxonomy" title=google-drive>
 google-drive
 </a><a href=https://blog.mustertech.org/en/tags/home/ class="badge bg-primary text-white rounded post-taxonomy" title=home>
 home
+</a><a href=https://blog.mustertech.org/en/tags/java/ class="badge bg-primary text-white rounded post-taxonomy" title=java>
+java
 </a><a href=https://blog.mustertech.org/en/tags/wifi/ class="badge bg-primary text-white rounded post-taxonomy" title=wifi>
 wifi
 </a></div>
