deploy: 8b950f399a77ef2a7ee227fdaf870f8fc7e82882

--- a/en/index.html
+++ b/en/index.html
@@ -142,6 +142,7 @@ English
 <i class="fas fa-fw fa-coffee"></i>4 min read
 </span><a href=https://blog.mustertech.org/en/categories/programming/ class="badge rounded-pill text-white bg-primary post-taxonomy">programming</a><a href=https://blog.mustertech.org/en/series/manual/ class="badge rounded-pill text-white bg-primary post-taxonomy">Manual</a><a href=https://blog.mustertech.org/en/tags/java/ class="badge rounded-pill text-white bg-primary post-taxonomy">java</a><a href=https://blog.mustertech.org/en/tags/coding/ class="badge rounded-pill text-white bg-primary post-taxonomy">coding</a><a href=https://blog.mustertech.org/en/tags/best-practice/ class="badge rounded-pill text-white bg-primary post-taxonomy">best-practice</a></div>
 <div class=post-summary>
+This post captures various best-practices and/or useful suggestions which might come handy while programming in Java. These are purely my observations and opinion using Java as the programming language to create backend services and cross-platform applications. Moreover, I have been using the latest stable version of …
 </div>
 </div>
 </article><article class="row card post component">
@@ -153,6 +154,8 @@ English
 <i class="fas fa-fw fa-coffee"></i>4 min read
 </span><a href=https://blog.mustertech.org/en/categories/ubuntu/ class="badge rounded-pill text-white bg-primary post-taxonomy">Ubuntu</a><a href=https://blog.mustertech.org/en/categories/system/ class="badge rounded-pill text-white bg-primary post-taxonomy">System</a><a href=https://blog.mustertech.org/en/series/manual/ class="badge rounded-pill text-white bg-primary post-taxonomy">Manual</a><a href=https://blog.mustertech.org/en/tags/gdrive/ class="badge rounded-pill text-white bg-primary post-taxonomy">gdrive</a><a href=https://blog.mustertech.org/en/tags/google-drive/ class="badge rounded-pill text-white bg-primary post-taxonomy">google-drive</a><a href=https://blog.mustertech.org/en/tags/linux/ class="badge rounded-pill text-white bg-primary post-taxonomy">linux</a><a href=https://blog.mustertech.org/en/tags/ubuntu/ class="badge rounded-pill text-white bg-primary post-taxonomy">ubuntu</a></div>
 <div class=post-summary>
+In this post, I&rsquo;ll be describing how to setup automatic mounting of one or more Google Drives locally, on your Ubuntu system. Following steps should generally work for the supported Ubuntu versions of the google-drive-ocamlfuse tool. Let&rsquo;s just right into the setup steps.
+Assumptions Here are the list of …
 </div>
 </div>
 </article><article class="row card post component">
