deploy: a75b2dc6b3328accccf2784fab1804c795fe2fcd

--- a/kn/index.html
+++ b/kn/index.html
@@ -3,22 +3,22 @@
 <meta name=generator content="Hugo 0.89.1">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>ನನಗೆ ನೆನಪಿರುವಾಗ</title><link rel=apple-touch-icon href=https://blog.mustertech.org/images/favicons/apple-touch-icon.png sizes=180x180>
+<title>ನೆನಪಿರುವಾಗ</title><link rel=apple-touch-icon href=https://blog.mustertech.org/images/favicons/apple-touch-icon.png sizes=180x180>
 <link rel=icon href=https://blog.mustertech.org/images/favicons/favicon-32x32.png sizes=32x32 type=image/png>
 <link rel=icon href=https://blog.mustertech.org/images/favicons/favicon-16x16.png sizes=16x16 type=image/png>
 <link rel=manifest href=https://blog.mustertech.org/images/favicons/manifest.json>
 <link rel=icon href=https://blog.mustertech.org/images/favicons/favicon.ico>
 <meta name=keywords content="Hugo,Bootstrap,Thème Blog">
-<meta name=description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"><meta itemprop=name content="ನನಗೆ ನೆನಪಿರುವಾಗ">
-<meta itemprop=description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"><meta property="og:title" content="ನನಗೆ ನೆನಪಿರುವಾಗ">
+<meta name=description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"><meta itemprop=name content="ನೆನಪಿರುವಾಗ">
+<meta itemprop=description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"><meta property="og:title" content="ನೆನಪಿರುವಾಗ">
 <meta property="og:description" content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://blog.mustertech.org/kn/"><meta property="og:site_name" content="ನನಗೆ ನೆನಪಿರುವಾಗ">
+<meta property="og:url" content="https://blog.mustertech.org/kn/"><meta property="og:site_name" content="ನೆನಪಿರುವಾಗ">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="ನನಗೆ ನೆನಪಿರುವಾಗ">
+<meta name=twitter:title content="ನೆನಪಿರುವಾಗ">
 <meta name=twitter:description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ">
 <meta name=twitter:site content="@ahikrv">
-<link rel=alternate type=application/rss+xml href=https://blog.mustertech.org/kn/index.xml title="ನನಗೆ ನೆನಪಿರುವಾಗ"><link rel=preload href=https://blog.mustertech.org/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
+<link rel=alternate type=application/rss+xml href=https://blog.mustertech.org/kn/index.xml title=ನೆನಪಿರುವಾಗ><link rel=preload href=https://blog.mustertech.org/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
 <noscript><link rel=stylesheet href=https://blog.mustertech.org/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous></noscript></head>
 <body><script src=https://blog.mustertech.org/js/bootstrap.min.b5d86dd3a5f60c90be38a252bb65fc1a2732f32e71dc12c051720f0c7aef3cde.js integrity="sha256-tdht06X2DJC+OKJSu2X8Gicy8y5x3BLAUXIPDHrvPN4=" crossorigin=anonymous></script><header><nav class="navbar top-app-bar top-app-bar-expand-lg fixed-top">
 <div class=container>
@@ -37,7 +37,7 @@
 </button>
 </div>
 <div class=offcanvas-body>
-<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=%e0%b2%a8%e0%b2%a8%e0%b2%97%e0%b3%86%20%e0%b2%a8%e0%b3%86%e0%b2%a8%e0%b2%aa%e0%b2%bf%e0%b2%b0%e0%b3%81%e0%b2%b5%e0%b2%be%e0%b2%97&url=https%3a%2f%2fblog.mustertech.org%2fkn%2f">
+<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=%e0%b2%a8%e0%b3%86%e0%b2%a8%e0%b2%aa%e0%b2%bf%e0%b2%b0%e0%b3%81%e0%b2%b5%e0%b2%be%e0%b2%97&url=https%3a%2f%2fblog.mustertech.org%2fkn%2f">
 <i class="fab fa-fw fa-twitter"></i> Twitter
 </a>
 <a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Facebook Share Button" target=_blank href="https://www.facebook.com/sharer/sharer.php?u=https%3a%2f%2fblog.mustertech.org%2fkn%2f">
@@ -133,7 +133,18 @@
 <main role=main class=container>
 <div class="row content">
 <div class=col-lg-8>
-<div class=container><div class="posts mb-4"></div><div class="row table-responsive mb-3"></div>
+<div class=container><div class="posts mb-4"><article class="row card post component">
+<div class=card-body>
+<h2 class="card-title post-title"><a href=https://blog.mustertech.org/kn/posts/parivarthane/>ಪರಿವರ್ತನೆ ಜಗದ ನಿಯಮ
+</a></h2><div class=post-meta><span class=post-date title="created on">
+<i class="fas fa-fw fa-calendar-alt"></i>ಡಿಸೆಂ 11, 2021
+</span><span class=post-reading-time title="reading time">
+<i class="fas fa-fw fa-coffee"></i>1 min read
+</span><a href=https://blog.mustertech.org/kn/categories/%E0%B2%95%E0%B2%B5%E0%B2%A8/ class="badge rounded-pill text-white bg-primary post-taxonomy">ಕವನ</a><a href=https://blog.mustertech.org/kn/series/%E0%B2%95%E0%B2%B5%E0%B2%A8-%E0%B2%B8%E0%B2%82%E0%B2%97%E0%B3%8D%E0%B2%B0%E0%B2%B9/ class="badge rounded-pill text-white bg-primary post-taxonomy">ಕವನ ಸಂಗ್ರಹ</a><a href=https://blog.mustertech.org/kn/tags/%E0%B2%A8%E0%B2%BE%E0%B2%B2%E0%B3%8D%E0%B2%95%E0%B3%81%E0%B2%B8%E0%B2%BE%E0%B2%B2%E0%B3%81/ class="badge rounded-pill text-white bg-primary post-taxonomy">ನಾಲ್ಕುಸಾಲು</a></div>
+<div class=post-summary>
+</div>
+</div>
+</article></div><div class="row table-responsive mb-3"></div>
 </div>
 </div><aside class="col-lg-4 sidebar d-flex">
 <div class=container>
@@ -144,10 +155,44 @@
 <div class="col-12 profile-meta"><div class=profile-name>Ravishankar Haranath</div><div class=profile-bio>Ubuntu, RHEL, JS/Node, Java-SE, Golang, Cloud and DevOps</div><div class=profile-company><i class="fas fa-fw fa-building"></i>Solutions with FOSS</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i><a href=https://goo.gl/maps/xw3V1iacBnY3JNRW6 target=_blank>Bengaluru</a></div></div>
 </div>
 </section>
-<section class="recent-posts row card component">
+<section class="featured-posts row card component">
+<div class=card-body>
+<h2 class=card-title>Featured Posts</h2>
+<ul><li><a href=https://blog.mustertech.org/kn/posts/parivarthane/>ಪರಿವರ್ತನೆ ಜಗದ ನಿಯಮ
+</a></li></ul>
+</div>
+</section><section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul></ul>
+<ul><li><a href=https://blog.mustertech.org/kn/posts/parivarthane/>ಪರಿವರ್ತನೆ ಜಗದ ನಿಯಮ
+</a></li></ul>
+</div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=https://blog.mustertech.org/kn/categories>Categories</a>
+</h2>
+<div><a href=https://blog.mustertech.org/kn/categories/%E0%B2%95%E0%B2%B5%E0%B2%A8/ class="badge bg-primary text-white rounded post-taxonomy" title=ಕವನ>
+ಕವನ
+</a></div>
+</div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=https://blog.mustertech.org/kn/series>Series</a>
+</h2>
+<div><a href=https://blog.mustertech.org/kn/series/%E0%B2%95%E0%B2%B5%E0%B2%A8-%E0%B2%B8%E0%B2%82%E0%B2%97%E0%B3%8D%E0%B2%B0%E0%B2%B9/ class="badge bg-primary text-white rounded post-taxonomy" title="ಕವನ ಸಂಗ್ರಹ">
+ಕವನ ಸಂಗ್ರಹ
+</a></div>
+</div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=https://blog.mustertech.org/kn/tags>Tags</a>
+</h2>
+<div><a href=https://blog.mustertech.org/kn/tags/%E0%B2%A8%E0%B2%BE%E0%B2%B2%E0%B3%8D%E0%B2%95%E0%B3%81%E0%B2%B8%E0%B2%BE%E0%B2%B2%E0%B3%81/ class="badge bg-primary text-white rounded post-taxonomy" title=ನಾಲ್ಕುಸಾಲು>
+ನಾಲ್ಕುಸಾಲು
+</a></div>
 </div>
 </section>
 </div>
