--- a/kn/404.html
+++ b/kn/404.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>404 Page not found - ನನಗೆ ನೆನಪಿರುವಾಗ</title><link rel=apple-touch-icon href=https://blog.mustertech.org/images/favicons/apple-touch-icon.png sizes=180x180>
+<title>404 Page not found - ನೆನಪಿರುವಾಗ</title><link rel=apple-touch-icon href=https://blog.mustertech.org/images/favicons/apple-touch-icon.png sizes=180x180>
 <link rel=icon href=https://blog.mustertech.org/images/favicons/favicon-32x32.png sizes=32x32 type=image/png>
 <link rel=icon href=https://blog.mustertech.org/images/favicons/favicon-16x16.png sizes=16x16 type=image/png>
 <link rel=manifest href=https://blog.mustertech.org/images/favicons/manifest.json>
@@ -12,7 +12,7 @@
 <meta itemprop=description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"><meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://blog.mustertech.org/kn/404.html"><meta property="og:site_name" content="ನನಗೆ ನೆನಪಿರುವಾಗ">
+<meta property="og:url" content="https://blog.mustertech.org/kn/404.html"><meta property="og:site_name" content="ನೆನಪಿರುವಾಗ">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ">
