--- a/en/about/index.html
+++ b/en/about/index.html
@@ -191,7 +191,7 @@ classical languages of India.</p>
 <section class="featured-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Featured Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/en/posts/java-code-points/>Useful Points for Java Coding
+<ul><li><a href=https://blog.mustertech.org/en/posts/java-class-vs-iface/>Using Abstract Class and Interface in Java
 </a></li><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
 </a></li><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
@@ -199,7 +199,7 @@ classical languages of India.</p>
 </section><section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/en/posts/java-code-points/>Useful Points for Java Coding
+<ul><li><a href=https://blog.mustertech.org/en/posts/java-class-vs-iface/>Using Abstract Class and Interface in Java
 </a></li><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
 </a></li><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
