--- a/en/index.html
+++ b/en/index.html
@@ -135,9 +135,9 @@ English
 <div class=col-lg-8>
 <div class=container><div class="posts mb-4"><article class="row card post component">
 <div class=card-body>
-<h2 class="card-title post-title"><a href=https://blog.mustertech.org/en/posts/java-code-points/>Useful Points for Java Coding
+<h2 class="card-title post-title"><a href=https://blog.mustertech.org/en/posts/java-class-vs-iface/>Using Abstract Class and Interface in Java
 </a></h2><div class=post-meta><span class=post-date title="created on">
-<i class="fas fa-fw fa-calendar-alt"></i>Dec 11, 2021
+<i class="fas fa-fw fa-calendar-alt"></i>Dec 12, 2021
 </span><span class=post-reading-time title="reading time">
 <i class="fas fa-fw fa-coffee"></i>4 min read
 </span><a href=https://blog.mustertech.org/en/categories/programming/ class="badge rounded-pill text-white bg-primary post-taxonomy">programming</a><a href=https://blog.mustertech.org/en/series/manual/ class="badge rounded-pill text-white bg-primary post-taxonomy">Manual</a><a href=https://blog.mustertech.org/en/tags/java/ class="badge rounded-pill text-white bg-primary post-taxonomy">java</a><a href=https://blog.mustertech.org/en/tags/best-practice/ class="badge rounded-pill text-white bg-primary post-taxonomy">best-practice</a></div>
@@ -185,7 +185,7 @@ What you need Linux …
 <section class="featured-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Featured Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/en/posts/java-code-points/>Useful Points for Java Coding
+<ul><li><a href=https://blog.mustertech.org/en/posts/java-class-vs-iface/>Using Abstract Class and Interface in Java
 </a></li><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
 </a></li><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
@@ -193,7 +193,7 @@ What you need Linux …
 </section><section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=https://blog.mustertech.org/en/posts/java-code-points/>Useful Points for Java Coding
+<ul><li><a href=https://blog.mustertech.org/en/posts/java-class-vs-iface/>Using Abstract Class and Interface in Java
 </a></li><li><a href=https://blog.mustertech.org/en/posts/gdrive-fuse-mount/>Mount Google-Drive in Ubuntu
 </a></li><li><a href=https://blog.mustertech.org/en/posts/usb-cdma-wifi/>Home Wifi With CDMA Modem
 </a></li></ul>
