deploy: e64efebb4549ae49a01bf8604334822da7761783

--- a/kn/index.html
+++ b/kn/index.html
@@ -3,22 +3,22 @@
 <meta name=generator content="Hugo 0.89.1">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>ನೆನಪಿರುವಾಗ</title><link rel=apple-touch-icon href=https://www.ravihara.in/images/favicons/apple-touch-icon.png sizes=180x180>
+<title>ರವಿ-ಹರ</title><link rel=apple-touch-icon href=https://www.ravihara.in/images/favicons/apple-touch-icon.png sizes=180x180>
 <link rel=icon href=https://www.ravihara.in/images/favicons/favicon-32x32.png sizes=32x32 type=image/png>
 <link rel=icon href=https://www.ravihara.in/images/favicons/favicon-16x16.png sizes=16x16 type=image/png>
 <link rel=manifest href=https://www.ravihara.in/images/favicons/manifest.json>
 <link rel=icon href=https://www.ravihara.in/images/favicons/favicon.ico>
 <meta name=keywords content="Hugo,Bootstrap,Thème Blog">
-<meta name=description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"><meta itemprop=name content="ನೆನಪಿರುವಾಗ">
-<meta itemprop=description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"><meta property="og:title" content="ನೆನಪಿರುವಾಗ">
+<meta name=description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"><meta itemprop=name content="ರವಿ-ಹರ">
+<meta itemprop=description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ"><meta property="og:title" content="ರವಿ-ಹರ">
 <meta property="og:description" content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.ravihara.in/kn/"><meta property="og:site_name" content="ನೆನಪಿರುವಾಗ">
+<meta property="og:url" content="https://www.ravihara.in/kn/"><meta property="og:site_name" content="ರವಿ-ಹರ">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="ನೆನಪಿರುವಾಗ">
+<meta name=twitter:title content="ರವಿ-ಹರ">
 <meta name=twitter:description content="ನನ್ನ ಕನ್ನಡ ಲೇಖನಗಳ ಸಂಗ್ರಹ">
 <meta name=twitter:site content="@ahikrv">
-<link rel=alternate type=application/rss+xml href=https://www.ravihara.in/kn/index.xml title=ನೆನಪಿರುವಾಗ><link rel=preload href=https://www.ravihara.in/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
+<link rel=alternate type=application/rss+xml href=https://www.ravihara.in/kn/index.xml title=ರವಿ-ಹರ><link rel=preload href=https://www.ravihara.in/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
 <noscript><link rel=stylesheet href=https://www.ravihara.in/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous></noscript></head>
 <body><script src=https://www.ravihara.in/js/bootstrap.min.b5d86dd3a5f60c90be38a252bb65fc1a2732f32e71dc12c051720f0c7aef3cde.js integrity="sha256-tdht06X2DJC+OKJSu2X8Gicy8y5x3BLAUXIPDHrvPN4=" crossorigin=anonymous></script><header><nav class="navbar top-app-bar top-app-bar-expand-lg fixed-top">
 <div class=container>
@@ -37,7 +37,7 @@
 </button>
 </div>
 <div class=offcanvas-body>
-<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=%e0%b2%a8%e0%b3%86%e0%b2%a8%e0%b2%aa%e0%b2%bf%e0%b2%b0%e0%b3%81%e0%b2%b5%e0%b2%be%e0%b2%97&url=https%3a%2f%2fwww.ravihara.in%2fkn%2f">
+<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=%e0%b2%b0%e0%b2%b5%e0%b2%bf-%e0%b2%b9%e0%b2%b0&url=https%3a%2f%2fwww.ravihara.in%2fkn%2f">
 <i class="fab fa-fw fa-twitter"></i> Twitter
 </a>
 <a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Facebook Share Button" target=_blank href="https://www.facebook.com/sharer/sharer.php?u=https%3a%2f%2fwww.ravihara.in%2fkn%2f">
