--- a/en/search/index.html
+++ b/en/search/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Search - While I remember</title><link rel=apple-touch-icon href=https://www.ravihara.in/images/favicons/apple-touch-icon.png sizes=180x180>
+<title>Search - Ravi-Hara</title><link rel=apple-touch-icon href=https://www.ravihara.in/images/favicons/apple-touch-icon.png sizes=180x180>
 <link rel=icon href=https://www.ravihara.in/images/favicons/favicon-32x32.png sizes=32x32 type=image/png>
 <link rel=icon href=https://www.ravihara.in/images/favicons/favicon-16x16.png sizes=16x16 type=image/png>
 <link rel=manifest href=https://www.ravihara.in/images/favicons/manifest.json>
@@ -17,7 +17,7 @@
 <meta name=twitter:title content="Search">
 <meta name=twitter:description content="Personal website of Ravishankar Haranath, created using Hugo">
 <meta name=twitter:site content="@ahikrv">
-<link rel=alternate type=application/rss+xml href=https://www.ravihara.in/en/search/index.xml title="While I remember"><meta data-name=search-index content="https://www.ravihara.in/en/index.json"><link rel=preload href=https://www.ravihara.in/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
+<link rel=alternate type=application/rss+xml href=https://www.ravihara.in/en/search/index.xml title=Ravi-Hara><meta data-name=search-index content="https://www.ravihara.in/en/index.json"><link rel=preload href=https://www.ravihara.in/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
 <noscript><link rel=stylesheet href=https://www.ravihara.in/css/bundle.min.eb6909de0c3ba6cd72d585f48552a32816b9dde206caf3e20ea340390eaa6058.css integrity="sha256-62kJ3gw7ps1y1YX0hVKjKBa53eIGyvPiDqNAOQ6qYFg=" crossorigin=anonymous></noscript><script>window.searchResultContentWordCount=parseInt('240'),window.searchPaginate=parseInt('5'),window.fuseOptions=JSON.parse('{\u0022ignoreLocation\u0022:true,\u0022includeMatches\u0022:true,\u0022includeScore\u0022:true,\u0022keys\u0022:[{\u0022name\u0022:\u0022title\u0022,\u0022weight\u0022:0.8},{\u0022name\u0022:\u0022content\u0022,\u0022weight\u0022:0.5},{\u0022name\u0022:\u0022tags\u0022,\u0022weight\u0022:0.3},{\u0022name\u0022:\u0022categories\u0022,\u0022weight\u0022:0.3},{\u0022name\u0022:\u0022series\u0022,\u0022weight\u0022:0.3}],\u0022threshold\u0022:0.1}')</script><script src=https://www.ravihara.in/js/search.43b67cbb03802efa0ea7d77757ffebc5f651fed83c4ae09914c0d2ef7cfdfaab.js integrity="sha256-Q7Z8uwOALvoOp9d3V//rxfZR/tg8SuCZFMDS73z9+qs=" crossorigin=anonymous></script>
 </head>
 <body><script src=https://www.ravihara.in/js/bootstrap.min.b5d86dd3a5f60c90be38a252bb65fc1a2732f32e71dc12c051720f0c7aef3cde.js integrity="sha256-tdht06X2DJC+OKJSu2X8Gicy8y5x3BLAUXIPDHrvPN4=" crossorigin=anonymous></script><header><nav class="navbar top-app-bar top-app-bar-expand-lg fixed-top">
